Commit con creación de algunas clases e integración mongoAtlas - Spring
- Las clases creadas en este commit son CitaDao, FormatoVacunacionDao,
PacienteDao, PruebaDao (de prueba, irrelevante para el proyecto),
SanitarioDao, UsuarioDao y PacienteController.
- Se han modificado las clases Paciente, Sanitario, Usuario,
AdministadorController y Cita para asemejarlas a las otras clases o por
exigencias del Spring.
- Se ha integrado el Spring con MongoDB Atlas, para lo cual se ha
modificado el archivo application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb+srv://jaime:passjaime@cluster0.meaqj.mongodb.net/SiGeVac?retryWrites=true&w=majority
+spring.data.mongodb.database=SiGeVa
