Actualizacion del Pom para sonarcloud

--- a/bin/resources/application.properties
+++ b/bin/resources/application.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.uri=mongodb+srv://jaime:passjaime@cluster0.meaqj.mongodb.net/SiGeVac?retryWrites=true&w=majority
 spring.data.mongodb.database=SiGeVa
+spring.data.rest.base-path=/SolicitarCita.html
+
