--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<description>SiGeVa es el Sistema de gestión de vacunación realizado por el grupo 6 de la intensificación de ISO en el año 20/21</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<sonar.organization>sigeva</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -45,7 +47,7 @@
 			<artifactId>junit-jupiter-engine</artifactId>
 			<version>5.8.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
