--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SiGeVa</name>
 	<description>SiGeVa es el Sistema de gestión de vacunación realizado por el grupo 6 de la intensificación de ISO en el año 20/21</description>
-
 	<properties>
 		<java.version>1.8</java.version>
-		<frontend-maven-plugin.version>1.12.0</frontend-maven-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -53,11 +51,13 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.8.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
+			<version>5.7.0</version>
 		</dependency>
 
 		<dependency>
@@ -76,22 +76,32 @@
 
 			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
+				<version>3.1.0</version>
 			</plugin>
 			<!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
 			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.0.2</version>
+			</plugin>
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
 			</plugin>
 			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.2</version>
 			</plugin>
 			<plugin>
 				<artifactId>maven-install-plugin</artifactId>
+				<version>2.5.2</version>
 			</plugin>
 			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
 			</plugin>
 		</plugins>
 	</build>
